# IntlGameSystems

./: .gitignore  CMakeLists.txt  README.md
docs/projects/: project1_config_validation.md
src/: main.cpp
src/config/: ConfigLoader.cpp  ConfigLoader.h  ConfigValidator.cpp  ConfigValidator.h  MarketRules.h
tests/: CMakeLists.txt  ConfigValidatorTests.cpp
